--- a/src/components/pages/home/diagram/diagram.style.css
+++ b/src/components/pages/home/diagram/diagram.style.css
@@ -1,9 +1,8 @@
-.react-flow__node {
+/* .react-flow__node {
   background-color: transparent;
   color: transparent;
   border: none;
 
-  pointer-events: none;
   box-shadow: none;
   padding: 0;
 }
@@ -13,8 +12,6 @@
   color: transparent;
   border: none;
   box-shadow: none;
-
-  pointer-events: none;
 }
 
 .react-flow__node-default {
@@ -22,7 +19,6 @@
   color: transparent;
   border: none;
   box-shadow: none;
-  pointer-events: none;
 }
 
 .react-flow__node-default.selectable.selected {
@@ -31,7 +27,7 @@
 
 .react-flow__node-default.selectable:hover {
   box-shadow: none;
-}
+} */
 
 /* .react-flow__attribution {
   display: none;
